--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -171,11 +171,15 @@
         <div class="d-flex align-items-start">
           <%= image_tag "0.jpg", class: "rounded me-3", style: "width:120px;" %>
           <div>
-            <strong><a href="http://linkedin.com/in/alexertech/" target="_blank" class="text-decoration-none">Alex Barrios</a></strong>
+            <strong>
+              <a href="https://www.alexertech.com/" target="_blank" class="text-decoration-none">
+                Alex Barrios
+              </a>
+            </strong>
             <p class="small mt-2">
-              Cuenta con más de 20 años de experiencia en distintos campos de las tecnologías de información.
-              Con un sólido conocimiento en Desarrollo de Software y certificado experto en Seguridad Informática.
-              Estudia budismo y meditación, y es un apasionado de la tecnología y la vida.
+              Senior Software Engineer, consultor en ciberseguridad y escritor técnico.
+              Con más de 20 años en tecnología, reflexiona sobre el impacto humano del software, la inteligencia artificial y la atención digital.
+              Es fundador de Greyhat y comparte sus pensamientos desde la experiencia, la terminal y la introspección.
             </p>
           </div>
         </div>
